--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,19 @@
     width: 100%;
 }
 .nav {
-    width: 100%;
+    width: 99.3%;
     height: 3.4vh;
     display: flex;
     justify-content: space-between;
     max-width: 100%;
     flex-direction: row;
     align-items: center;
-    margin: 2.6% 0 4.5% 0;
-    padding: 0 2.9%; 
+    margin: 2.6% 0 4.9% 0;
+    padding: 0 2.95%;
     white-space: nowrap;
 }
-.nav__logo {  
-    width: 15%;  
+.nav__logo {
+    width: 15%;
     max-width: 100%;
     display: flex;
 }
@@ -35,7 +35,7 @@
 .nav__menu {
     max-width: 100%;
     margin: 0.4% 0 0 0;
-    width: 36%;
+    width: 36.4%;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -44,11 +44,11 @@
     max-width: 100%;
     display: flex;
     justify-content: space-between;
-    width: 38%;
+    width: 38.6%;
 }
 .nav__menu-second {
     max-width: 100%;
-    width: 57%;
+    width: 56.2%;
     display: flex;
     justify-content: space-between;
     margin: 0;
@@ -91,6 +91,7 @@
     cursor: pointer;
 }
 .nav__menu-3 {
+    width: 20%;
     display: flex;
     max-width: 100%;
     font-family: Montserrat;
@@ -109,6 +110,7 @@
     cursor: pointer;
 }
 .nav__menu-roadster {
+    width: 24%;
     display: flex;
     max-width: 100%;
     font-family: Montserrat;
@@ -127,6 +129,7 @@
     cursor: pointer;
 }
 .nav__menu-energy {
+    width: 20%;
     display: flex;
     max-width: 100%;
     font-family: Montserrat;
@@ -145,12 +148,12 @@
     cursor: pointer;
 }
 .menu {
-    padding: 0 1.1% 0 0;
+    align-items: center;
     max-width: 100%;
-    margin: 0 0 0 0;
     display: flex;
     justify-content: space-between;
-    width: 16.3%;
+    width: 15.7%;
+    padding-right: 0.5%;
 }
 .menu__shop {
     display: flex;
@@ -231,7 +234,7 @@
     width: 67vmax;
     max-width: 100%;
     max-height: 100%;
-    margin: 0 5% 1.45% 0;
+    margin: 0 5% 1.4% 0;
 }
 .tesla-title__car-mobi {
     display: none;
@@ -290,7 +293,7 @@
 }
 .order {
     margin-left: 15.5%;
-    padding:2.8%;
+    padding: 2.8%;
     font-family: Montserrat;
     font-weight: 700;
     min-width: 160px;
@@ -465,8 +468,8 @@
 }
 .footer__left {
     max-height: 100%;
-    height: 95vh;
-    background: #E51937;
+    height: 116.85vh;
+    background: #e51937;
     width: 30.5%;
     color: #fff;
 }
@@ -479,19 +482,19 @@
     font-size: 30px;
     font-style: normal;
     font-weight: 500;
-    line-height: 36.5px;
-    padding-top: 13.4%;
+    line-height: 37px;
+    padding-top: 13.8%;
 }
 .footer__text {
     font-family: Montserrat;
-    font-size: 14.7px;
+    font-size: 14.75px;
     font-style: normal;
     font-weight: 500;
-    line-height: 18.4px;
+    line-height: 18.9px;
     letter-spacing: 0em;
     padding-right: 15%;
     margin-bottom: 14.9%;
-    padding-top: 3.6%;
+    padding-top: 3.44%;
 }
 .left-body {
     font-family: Montserrat;
@@ -501,7 +504,7 @@
     line-height: 21px;
     letter-spacing: 0em;
     text-transform: uppercase;
-    align-items: center; 
+    align-items: center;
     width: 100%;
     max-width: 100%;
     padding-left: 12.8%;
@@ -536,7 +539,7 @@
     display: flex;
     width: 39.6%;
 }
-.left-body__star-img{
+.left-body__star-img {
     display: flex;
     width: 36%;
     justify-content: space-between;
@@ -556,16 +559,18 @@
     text-transform: uppercase;
     opacity: 0.7;
     padding-left: 2.8%;
-    padding-top: 3%;
+    padding-top: 3.4%;
     align-items: center;
 }
 .left-body__penultimate {
     display: flex;
     width: 39.6%;
+    padding-top: 0.5%;
 }
 .left-body__last {
     display: flex;
     width: 39.6%;
+    padding-top: 0.5%;
 }
 .security {
     width: 94%;
@@ -594,6 +599,7 @@
 .footer-info__img {
     align-items: center;
     width: 11%;
+    padding-top: 2.5%;
 }
 .footer-info__img:hover {
     opacity: 0.1;
@@ -618,7 +624,7 @@
     cursor: pointer;
 }
 .footer__order-desk {
-    border: 2px solid #fff;
+    border: 3px solid #fff;
     width: 91%;
     height: 40px;
     padding: 5%;
@@ -632,50 +638,78 @@
     align-items: center;
 }
 .footer__right {
-    width: 69.5%;
+    width: 59%;
     max-width: 100%;
+    overflow: hidden;
 }
 .footer__right-title {
+    width: 97.8%;
     max-width: 100%;
-    padding-top: 16.8%;
-    text-align: right;
+    padding-top: 11.5%;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 13.7vw;
-    line-height: 100px;
+    font-size: 14vw;
     opacity: 0.15;
     color: #e51937;
+    margin-left: 4%;
+}
+.right-pc {
+    position: relative;
 }
 .right-pc__img {
-    max-width: 108%;
-    position: relative;
-    right: 6.5vmax;
-    bottom: 3vmax;
+    max-width: 100%;
+    position: absolute;
+    right: 10.2vw;
+    z-index: 10;
+    /* top: 140.5vh; */
+}
+.right-pc__img > img {
+    width: 60vw;
+    height: 40vw;
 }
 .pointer-left {
-    position: relative;
+    max-width: 100%;
+    position: absolute;
+    left: 18.3vmax;
+    bottom: 18.2vmax;
+    width: 18%;
+    display: flex;
+    flex-direction: row;
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 17px;
     line-height: 15px;
+}
+.pointer-left__desk {
     text-align: left;
+    padding-left: 3.8%;
 }
 .pointer-top {
-    position: relative;
+    width: 20%;
+    max-width: 100%;
+    position: absolute;
+    left: 37.7vmax;
+    bottom: 31.75vmax;
+    display: flex;
+    flex-direction: row;
     font-family: Montserrat;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 17px;
     line-height: 15px;
+}
+.pointer-top__desk {
+    text-align: left;
+    padding-left: 1%;
 }
 .pointer-bottom {
     max-width: 100%;
     position: absolute;
-    left: 65.5vmax;
-    top: 166vmax;
-    width: 100%;
+    left: 41.5vmax;
+    top: 25.5vmax;
+    width: 30%;
     display: flex;
     flex-direction: row;
     font-family: Montserrat;
@@ -685,8 +719,8 @@
     line-height: 15px;
 }
 .pointer-bottom__desk {
-    padding-left: 0.2%;
-    padding-top: 6.3%;
+    padding-left: 1.1%;
+    padding-top: 28.5%;
     text-align: left;
 }
 .right-mobi {
@@ -700,8 +734,7 @@
 }
 .right-ipad__img {
     display: none;
-} 
-
+}
 
 /* ---media 768px--- */
 
@@ -796,7 +829,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        margin: 0 0 7.8% 0;
+        margin: 0 0 7.9% 0;
     }
     .info-block {
         width: 63.5%;
@@ -812,7 +845,7 @@
     .info-block__img-ipad-left {
         max-width: 100%;
         display: flex;
-        justify-content: left; 
+        justify-content: left;
     }
     .info-block__img-ipad-right {
         max-width: 100%;
@@ -820,7 +853,7 @@
         justify-content: right;
     }
     .test-drive {
-        width: 54.5%;
+        width: 54.6%;
         max-width: 100%;
         display: flex;
         margin: 0;
@@ -836,6 +869,8 @@
         max-width: 100%;
         padding: 0;
         margin: 0;
+        width: 100%;
+        align-items: center;
     }
     .test-drive__desk {
         max-width: 100%;
@@ -847,14 +882,15 @@
         line-height: 20px;
         letter-spacing: 0em;
         text-align: center;
-        color: #E51937;
-        padding: 0.5% 0 0 0;
-        margin: 0 6% 0 0;
+        color: #e51937;
+        width: 36%;
+        align-items: center;
+        padding-top: 1%;
     }
     .order {
         box-sizing: border-box;
-        width: 52.6%;
-        height: 8.5vh;
+        width: 52.8%;
+        height: 9.6vh;
         display: flex;
         justify-content: center;
         max-width: 100%;
@@ -872,13 +908,13 @@
     }
     .main {
         width: 100%;
-        height: 1029px;
+        height: 1030px;
         max-width: 100%;
     }
     .main__inner {
         flex-direction: column;
         background-image: url(../images/2013-tesla-model-s-cockpitipad.png);
-        background-position-y: 8.5%;
+        background-position-y: 7.7%;
     }
     .left-section {
         width: 100%;
@@ -886,7 +922,7 @@
         margin-bottom: 5.6%;
     }
     .left-section__title {
-        padding: 6.7% 0 0 56.5%;
+        padding: 6.6% 0 0 56.5%;
     }
     .right-section {
         height: 487px;
@@ -955,7 +991,7 @@
         text-align: center;
     }
     .features__order {
-        width: 44.2%;
+        width: 44%;
         height: 55.21px;
     }
     .features__order-desk {
@@ -969,66 +1005,151 @@
         text-align: center;
     }
     .footer {
+        flex-direction: column-reverse;
     }
     .footer__left {
+        width: 100%;
+        height: 63.5vmax;
+    }
+    .footer__left-ipad {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        padding-top: 8.2%;
     }
     .footer__left-head {
+        width: 100%;
+        padding-left: 4.4%;
     }
     .footer__title {
+        padding-top: 0%;
     }
     .footer__text {
+        padding-top: 3.3%;
+        width: 90%;
+        font-size: 14.8px;
+        padding-right: 0%;
     }
-    .footer__left-body {
+    .left-body {
+        width: 100%;
+        padding: 0.1% 0 0 5.1%;
+        margin: 0;
     }
     .left-body__title {
+        margin-bottom: 7.4%;
     }
-    .rating {
+    .left-body__middle {
+        padding-top: 0%;
     }
-    .rating__sub-title {
+    .left-body__penultimate {
+        padding-top: 0;
     }
-    .rating__star {
+    .left-body__last {
+        align-items: center;
+        font-size: 17.2px;
+        padding-top: 0;
     }
-    .rating__star-img {
-    }
-    .rating__add {
-    }
-    .rating-second {
-    }
-    .footer__left-bottom {
+    .left-body__star-img {
+        padding-top: 0.25%;
+        padding-left: 4.5%;
+        width: 44.5%;
     }
     .security {
+        display: none;
     }
-    .footer-info__order {
+    .footer__left-bottom {
+        display: none;
+        padding-top: 6.4%;
+        width: 95%;
+        justify-content: right;
+
     }
     .footer-info {
+        width: 38%;
     }
     .footer-info__img {
+        width: 3.5%;
+        
     }
     .footer-info__desk {
+        width: 59%;
     }
     .footer__order {
+        width: 30%;
     }
     .footer__order-desk {
     }
     .footer__right {
+        width: 100%;
+        height: 70vmax;
     }
     .right-pc {
+        display: none;
     }
     .footer__right-title {
-    }
-    .right-pc__img {
-    }
-    .right-mobi {
-    }
-    .right-mobi__img {
-    }
-    .right-ipad {
+        padding-top: 4.8%;
+        padding-left: 0.5%;
+        width: 100%;
+        font-size: 148px;
+        font-style: normal;
+        line-height: 180px;
+        letter-spacing: 0em;
+        margin: 0;
     }
     .right-ipad__img {
+        display: inline;
+        position: absolute;
+        top: 374vh;
+        right: 4.5vw;
+    }
+    .right-pc__img {
+        display: none;
+    }
+    .pointer-left {
+        width: 18%;
+        top: 374vh;
+        left: 22.4vw;
+    }
+    .pointer-left__desk {
+        padding-left: 1.2%;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 13px;
+    }
+    .pointer-top {
+        top: 368vh;
+        left: 48.5vw;
+        width: 17%;
+    }
+    .pointer-top__desk {
+        padding-left: 0.5%;
+        padding-top: 1.5%;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14.7px;
+        line-height: 13px;
+    }
+    .pointer-bottom {
+        top: 419.1vh;
+        left: 53.5vw;
+        width: 26%;
+    }
+    .pointer-bottom__desk {
+        padding-left: 6.2%;
+        padding-top: 25%;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14.7px;
+        line-height: 13px;
+    }
+    .right-ipad {
+        display: inline;
     }
 }
-
-
 
 /* ---media 375px--- */
 
