--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,10 @@
     padding: 0;
 }
 .body {
-    width: 100vmax;
-    max-width: 100%;
+    width: 100%;
     text-align: center;
 }
 .header {
-    max-width: 100%;
     width: 100%;
 }
 .nav {
@@ -26,14 +24,16 @@
 }
 .nav__logo {
     width: 16.6vw;
-    max-width: 100%;
     display: flex;
+}
+.nav__logo-img {
+    width: 11.5vw;
+    height: 6vw;
 }
 .nav__logo-img-mobi {
     display: none;
 }
 .nav__menu {
-    max-width: 100%;
     margin: 0.4vw 0 0 0;
     width: 36.4vw;
     height: 1.8vw;
@@ -41,13 +41,11 @@
     justify-content: space-between;
 }
 .nav__menu-first {
-    max-width: 100%;
     display: flex;
     justify-content: space-between;
     width: 13.6vw;
 }
 .nav__menu-second {
-    max-width: 100%;
     width: 21.6vw;
     display: flex;
     justify-content: space-between;
@@ -55,7 +53,6 @@
 }
 .nav__menu-s {
     display: flex;
-    max-width: 100%;
     font-family: Montserrat;
     font-weight: 600;
     font-style: normal;
@@ -75,7 +72,6 @@
 }
 .nav__menu-x {
     display: flex;
-    max-width: 100%;
     font-family: Montserrat;
     font-weight: 600;
     text-decoration: none;
@@ -151,7 +147,6 @@
 }
 .menu {
     align-items: center;
-    max-width: 100%;
     display: flex;
     justify-content: space-between;
     width: 14.7vw;
@@ -159,7 +154,6 @@
 }
 .menu__shop {
     display: flex;
-    max-width: 100%;
     font-family: Montserrat;
     font-weight: 600;
     text-decoration: none;
@@ -178,7 +172,6 @@
 }
 .menu__enter {
     display: flex;
-    max-width: 100%;
     font-family: Montserrat;
     font-weight: 600;
     text-decoration: none;
@@ -197,7 +190,6 @@
 }
 .menu__img-burger {
     display: flex;
-    max-width: 100%;
     width: 1.6vw;
     height: 1.1vw;
 }
@@ -232,13 +224,12 @@
     font-weight: 500;
     font-size: 1.04vw;
     line-height: 0;
-    margin-bottom: 2.4%;
+    margin-bottom: 2.4vw;
 }
 .tesla-title__car-pc {
-    width: 67vmax;
-    max-width: 100%;
-    max-height: 100%;
-    margin: 0 5% 1.4% 0;
+    width: 67.3vw;
+    height: 31.1vw;
+    margin: 0 5.2vw 1.6vw 0;
 }
 .tesla-title__car-mobi {
     display: none;
@@ -247,17 +238,17 @@
     display: none;
 }
 .tesla-info-block {
-    max-width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 1.8%;
-    align-items: center;
+    margin-bottom: 1.8vw;
+    width: 100%;
 }
 .info-block {
-    margin-right: 2.44%;
+    width: 11.2vw;
 }
 .info-block__img-pc {
     display: flex;
+    width: 26.3vw;
 }
 .info-block__img-ipad-left {
     display: none;
@@ -273,12 +264,17 @@
 }
 .test-drive {
     display: flex;
-    margin-right: 3.58%;
     align-items: center;
+    width: 22.4vw;
+    height: 4.3vw;
+}
+.test-drive__img {
+    width: 0.1vw;
+    height: 1.5vw;
 }
 .test-drive__responsive {
-    align-items: center;
-    padding-top: 12%;
+    width: 1.6vw;
+    height: 1.6vw;
 }
 .test-drive__mobile {
     display: none;
@@ -288,26 +284,24 @@
 }
 .test-drive__desk {
     font-family: Montserrat;
-    font-weight: 700;
-    font-size: 13px;
-    line-height: 16px;
+    font-weight: 600;
+    font-size: 0.9vw;
     text-transform: uppercase;
     white-space: nowrap;
-    margin-left: 2%;
+    width: 10.1vw;
+    margin-right: 0.7vw;
 }
 .order {
-    margin-left: 15.5%;
-    padding: 2.8%;
+    padding: 0.7vw;
     font-family: Montserrat;
     font-weight: 700;
-    min-width: 160px;
     border: 2px solid #e51937;
-    font-size: 13px;
-    line-height: 126%;
+    font-size: 0.9vw;
     text-align: center;
     align-items: center;
     text-transform: uppercase;
     color: #e51937;
+    width: 11.3vw;
 }
 .order:hover {
     cursor: pointer;
@@ -325,27 +319,25 @@
     cursor: pointer;
 }
 .main {
-    max-width: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
-    height: 900px;
+    height: 62.4vw;
     margin: 0;
     padding: 0;
 }
 .main__inner {
-    max-width: 100%;
     display: flex;
     justify-content: space-between;
     width: 100%;
     background-image: url(../images/2013-tesla-model-s-cockpit.png);
-    background-position-y: 56.5px;
+    background-position-y: 3.8vw;
     background-repeat: no-repeat;
+    background-size: contain;
 }
 .left-section {
-    max-width: 100%;
     display: flex;
-    width: 68%;
+    width: 69.45vw;
 }
 .left-section__img {
     display: none;
@@ -354,41 +346,39 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 70px;
-    line-height: 85.3px;
+    font-size: 4.88vw;
     color: #e51937;
     display: flex;
-    padding-left: 8.2%;
-    padding-top: 6.5%;
+    padding-left: 5.5vw;
+    padding-top: 4.4vw;
 }
 .right-section {
-    width: 30.55%;
-    height: 100%;
+    width: 30.55vw;
+    height: 62.4vw;
     background: #e51937;
     color: #fff;
 }
 .main-top {
     text-align: left;
-    padding-left: 11%;
+    padding-left: 3.3vw;
 }
 .right-section__title {
     font-family: Montserrat;
-    font-size: 29.3px;
+    font-size: 2.04vw;
     font-style: normal;
     font-weight: 600;
-    line-height: 36px;
-    padding-top: 13.4%;
-    padding-left: 1%;
+    padding-top: 3.5vw;
+    padding-left: 0.3vw;
 }
 .right-section__text {
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 14.8px;
-    line-height: 18.29px;
-    margin-bottom: 15.5%;
-    padding-right: 18%;
-    padding-top: 3.3%;
+    font-size: 1.03vw;
+    line-height: 1.3vw;
+    margin-bottom: 4.3vw;
+    padding-right: 3.3vw;
+    padding-top: 0.9vw;
 }
 .right-section__img {
     flex-direction: column;
@@ -396,7 +386,7 @@
 }
 .right-section__img-display {
     margin-bottom: 2.1vw;
-    padding-left: 1%;
+    padding-left: 0.3vw;
     width: 13.2vw;
     height: 4.4vw;
 }
@@ -406,7 +396,7 @@
     height: 5.1vw;
 }
 .right-section__img-bag {
-    padding-left: 1%;
+    padding-left: 0.3vw;
     margin-bottom: 11.5vw;
     width: 14.3vw;
     height: 4.95vw;
@@ -430,6 +420,10 @@
     align-items: center;
     width: 1.6vw;
     padding-top: 0.2vw;
+}
+.features-info__img > img {
+    width: 1.6vw;
+    height: 1.6vw;
 }
 .features-info__img:hover {
     opacity: 0.1;
@@ -656,19 +650,15 @@
     position: relative;
 }
 .right-pc__img {
-    max-width: 100%;
     position: absolute;
-    right: 17.2vw;
-    top: 15vw;
-    z-index: 10;
-
+    right: 3.1vw;
+    top: 11.8vw;
 }
 .right-pc__img > img {
     width: 73vw;
-    height: 38vw;
+    height: 41.1vw;
 }
-
-.pointer-left {
+/* .pointer-left {
     height: 19.5vw;
     position: absolute;
     left: 18.5vw;
@@ -733,7 +723,7 @@
     padding-left: 0.2vw;
     padding-top: 6.3vw;
     text-align: left;
-}
+} */
 .right-mobi {
     display: none;
 }
@@ -770,6 +760,10 @@
     .nav__logo {
         display: flex;
         justify-content: start;
+    }
+    .nav__logo-img {
+        width: 21.7vw;
+        height: 6.6vw;
     }
     .nav__logo-img-mobi {
         display: none;
@@ -840,11 +834,10 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        margin: 0 0 7.8% 0;
+        margin: 0 0 11.5% 0;
     }
     .info-block {
-        width: 100vw;
-        max-width: 100%;
+        width: 100%;
         display: flex;
         justify-content: space-around;
         flex-direction: row;
@@ -878,7 +871,7 @@
         max-width: 100%;
         display: flex;
         margin: 0;
-        padding: 7vw 0 0 0;
+        padding: 10.4vw 0 0 0;
         justify-content: space-between;
         align-items: center;
     }
@@ -893,7 +886,8 @@
         align-items: center;
     }
     .test-drive__img {
-        width: 4.5vw;
+        width: 6.2vw;
+        height: 4vw;
     }
     .test-drive__desk {
         max-width: 100%;
@@ -906,7 +900,7 @@
         letter-spacing: 0em;
         text-align: center;
         color: #e51937;
-        width: 19.6vw;
+        width: 18.8vw;
         align-items: center;
         padding-top: 0.2vw;
     }
@@ -928,7 +922,7 @@
         padding: 0;
     }
     .main {
-        width: 100vw;
+        width: 100%;
         height: 134vw;
     }
     .main__inner {
@@ -938,34 +932,34 @@
         background-size: contain;
     }
     .left-section {
-        width: 100vw;
-        height: 70vw;
+        width: 100%;
+        height: 70.6vw;
     }    
     .left-section__title {
         padding: 6.6vw 0 0 56.5vw;
         font-size: 9.1vw;
     }
     .right-section {
-        height: 63.3vw;
-        width: 100vw;
+        height: 63.5vw;
+        width: 100%;
         flex-direction: column;
         display: flex;
         justify-content: space-between;
     }    
     .main-top {
         display: flex;
-        padding-left: 3.5vw;
+        padding-left: 4.3vw;
         flex-direction: row;
     }
     .right-section__title {
         display: flex;
-        padding-top: 7.5vw;
+        padding-top: 7.4vw;
         margin-bottom: 0;
         flex-direction: column;
         font-size: 3.83vw;
     }
     .right-section__text {
-        width: 52vw;
+        width: 43vw;
         padding-top: 2.8vw;
         display: flex;
         text-align: left;
@@ -974,10 +968,10 @@
         font-size: 1.9vw;
     }
     .right-section__img {
-        padding: 7.4vw 7vw 0 2.3vw;
+        padding: 7.4vw 0 0 11.1vw;
         text-align: left;
         flex-direction: row;
-        width: 43vw;
+        width: 42vw;
     }
     .right-section__img-display {
         padding-left: 0.4vw;
@@ -997,20 +991,21 @@
     }
     .features {
         margin-bottom: 6.75vw;
-        width: 98.6vw;
+        width: 100%;
         justify-content: center;
     }
     .features-info {
-        width: 31.1vw;
+        width: 31vw;
         padding-top: 0.1%;
     }
     .features-info__img {
         align-items: center;
-        width: 4.3vw;
+        width: 4.2vw;
         padding-top: 0.6vw;
     }
     .features-info__img > img {
-        width: 4vw;
+        width: 4.3vw;
+        height: 4.3vw;
     }
     .features-info__desk {
         font-family: Montserrat;
@@ -1023,7 +1018,7 @@
         width: 22.4vw;
     }
     .features__order {
-        width: 27.5vw;
+        width: 29vw;
     }
     .features__order-desk {
         padding: 3vw;
@@ -1040,17 +1035,17 @@
         flex-direction: column-reverse;
     }
     .footer__left {
-        width: 100vw;
+        width: 100%;
         height: 63.5vw;
     }
     .footer__left-ipad {
         display: flex;
         flex-direction: row;
-        width: 100vw;
+        width: 100%;
         padding-top: 8.2vw;
     }
     .footer__left-head {
-        width: 100vw;
+        width: 100%;
         padding-left: 4.4vw;
     }
     .footer__title {
@@ -1059,7 +1054,7 @@
         font-style: normal;
         font-weight: 500;
         line-height: 5vw;
-        padding-top: 0.0vw;
+        padding-top: 0;
     }
     .footer__text {
         padding-top: 1.6vw;
@@ -1070,8 +1065,8 @@
         font-weight: 600;
     }
     .left-body {
-        width: 100vw;
-        padding: 0.1vw 0 0 5.1vw;
+        width: 100%;
+        padding: 0.1vw 0 0 7.8vw;
         margin: 0;
     }
     .left-body__ipad {
@@ -1151,7 +1146,7 @@
     }
     .footer__left-bottom {
         padding-top: 7.8vw;
-        width: 100vw;
+        width: 100%;
         justify-content: center;
     }
     .footer-info {
@@ -1187,7 +1182,7 @@
     .footer__right-title {
         padding: 0;
         padding-left: 0.5vw;
-        width: 100vw;
+        width: 100%;
         font-size: 19.3vw;
         font-style: normal;
         line-height: 24vw;
@@ -1203,17 +1198,17 @@
     .right-ipad__img {
         display: initial;
         position: relative;
-        bottom: 13.7vw;
+        bottom: 18.6vw;
         right: 2.3vw;
     }
     .right-ipad__img > img {
         width: 95.4vw;
-        height: 50.4vw;
+        height: 55.4vw;
     }
     .right-pc__img {
         display: none;
     }
-    .pointer-left {
+    /* .pointer-left {
         width: 18.1vw;
         left: 24.7vw;
         bottom: 31.4vw;
@@ -1265,21 +1260,21 @@
         font-weight: 600;
         font-size: 1.9vw;
         line-height: 1.8vw;
-    }
+    } */
 }
 
 /* ---media 375px--- */
 
 @media (max-width: 375px) {
     .body {
-        max-width: 100vw;
+        max-width: 100%;
         width: 375px;
     }
     .header {
-        max-width: 100vw;
+        max-width: 100%;
     }
     .nav {
-        width: 100vw;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -1340,7 +1335,7 @@
         display: none;
     }
     .tesla-title {
-        max-width: 100vw;
+        max-width: 100%;
         background-image: url(/images/Tesla-Wordmark-Red-mobi.png);
         background-size: contain;
         background-repeat: no-repeat;
@@ -1348,7 +1343,7 @@
         margin-bottom: 4.8vw;
     }
     .tesla-title__subtitle {
-        width: 100vw;
+        width: 100%;
         font-family: Montserrat;
         font-size: 13vw;
         font-style: normal;
@@ -1373,7 +1368,7 @@
         display: none;
     }
     .tesla-title__car-mobi {
-        width: 95.5vw;
+        width: 95.5%;
         margin: 0 0 0 2vw;
         max-width: 100vw;
         display: flex;
@@ -1381,8 +1376,9 @@
     .tesla-info-block {
         display: flex;
         flex-direction: column;
-        margin: 0 0 8.4vw 0;
+        margin: 0 0 13.4vw 0;
     }
+    
     .info-block__img-pc {
         display: none;
     }
@@ -1396,8 +1392,8 @@
         display: none;
     }
     .info-block {
-        max-width: 100vw;
-        width: 100vw;
+        max-width: 100%;
+        width: 100%;
         display: flex;
         justify-content: space-around;
         flex-direction: row-reverse;
@@ -1419,11 +1415,10 @@
     .test-drive {
         display: flex;
         margin: 0;
-        padding: 11.5vw 0 0 0;
+        padding: 17.1vw 0 0 0;
         align-items: center;
-        justify-content: center;
-        width: 100vw;
-        max-width: 100vw;
+        justify-content: space-around;
+        width: 81%;
     }
     .test-drive__responsive {
         display: none;
@@ -1439,7 +1434,9 @@
         height: 7vw;
     }
     .test-drive__img {
-        width: 5vw;
+        width: 6vw;
+        height: 0vw;
+        padding-bottom: 8.5vw;
     }
     .test-drive__desk {
         color: #e51937;
@@ -1449,8 +1446,8 @@
         font-style: normal;
         font-weight: 700;
         letter-spacing: 0em;
-        width: 30.9vw;
-        max-width: 100vw;
+        width: 28.3vw;
+        max-width: 100%;
     }
     .order {
         color: #fff;
@@ -1483,18 +1480,17 @@
         flex-direction: column;
         background-image: none;
         background-position-y: 0;
-        justify-content: none;
     }
     .left-section {
         display: block;
-        width: 100vw;
+        width: 100%;
         margin: 0;
         height: 86vw;
     }
     .left-section__img {
         display: initial;
         height: 88.9vw;
-        width: 100vw;
+        width: 100%;
         margin: 0;
     }
     .left-section__title {
@@ -1502,7 +1498,7 @@
     }
     .right-section {
         height: 81vw;
-        width: 100vw;
+        width: 100%;
         margin: 0;
         padding: 0;
     }
@@ -1542,7 +1538,7 @@
     .footer__left-ipad {
         display: flex;
         flex-direction: row;
-        width: 100vw;
+        width: 100%;
         padding-top: 5.5vw;
     }
     .footer__left-head {
@@ -1591,7 +1587,7 @@
         display: none;
     }
     .footer__right {
-        width: 100vw;
+        width: 100%;
         height: 78.2vw;
     }
     .right-pc {
@@ -1623,19 +1619,19 @@
         position: relative;
         text-align: left;
         top: 35.6vw;
-        width: 100vw;
+        width: 100%;
     }
     .right-mobi__img {
-        margin-left: 2vw;
-        margin-top: 16vw;
+        margin-left: 3.1vw;
+        margin-top: 11.6vw;
         display: flex;
         position: relative;
     }
     .right-mobi__img > img {
-        width: 100vw;
-        height: 50vw;
+        width: 99%;
+        height: 54.8vw;
     }
-    .pointer-left {
+    /* .pointer-left {
         left: 24.2vw;
         bottom: 30.2vw;
         width: 18.1vw;
@@ -1691,5 +1687,5 @@
         font-weight: 600;
         font-size: 1.9vw;
         line-height: 1.7vw;
-    }
+    } */
 }
